# matxin-spa-eus

./: Makefile.am  autogen.sh  configure.ac  matxin-spa-eus.interchunk_move1.xml  matxin-spa-eus.interchunk_move2.xml  matxin-spa-eus.interchunk_move3.xml  matxin-spa-eus.intrachunk_move.xml  matxin-spa-eus.spa-eus.cfg.in  matxin-spa-eus.verb_transfer.foma  modes.xml
texts/: oracions.eus.txt  oracions.spa.txt
